# XTYLearner

./: .gitignore  .pre-commit-config.yaml  .yamllint  ADAPTIVE_BENCHMARK_PROPOSAL.md  AGENTS.md  BRIDGE_DIFF_DEBUG_PLAN.md  BRIDGE_DIFF_FINDINGS.md  CI_BENCHMARK_ANALYSIS.md  CLAUDE.md  CRITEO_SETUP.md  CRITICAL_FINDING.md  DIAGNOSIS.md  FLOW_SSC_PERFORMANCE_ANALYSIS.md  INVESTIGATION_FINDINGS.md  INVESTIGATION_PLAN.md  INVESTIGATION_SUMMARY.md  NEW_MODEL_TRACKING_PROPOSAL.md  NHEFS_PERFORMANCE_ANALYSIS.md  NHEFS_SAMPLE_SIZE_FIX.md  PREDICTED_RESULTS.md  PROPOSED_MODELS.md  PROPOSED_MODELS_SUMMARY.md  README.md  SOLUTION_IMPLEMENTED.md  asv.conf.json  benchmark_config.json  benchmark_config_adaptive.json  benchmark_results.md  benchmark_results_updated.md  bridge_diff_diagnostic_results.json  debug-asv-structure.py  debug_flow_ssc_nhefs.py  eval.py  eval_active.py  experimental_benchmark_1000_30.json  history.json  index.html  pyproject.toml  quick_active_benchmark_config.json  quick_benchmark_config.json  (+6 more)
.asv/html-local/: index.json  info.json  regressions.xml
.asv/results/: benchmarks.json
.claude/: settings.local.json
.github/workflows/: benchmark.yml  python-tests.yml
benchmarks/: benchmark_models.py  index.html
configs/: continuous.yaml
docs/: additional_benchmark_coverage.md  model_guide.md  open_set_ssl.md  ordinal_classes_plan.md
docs/baselines/: cevae_m.md  deconfounder.md  fixmatch.md  label_propagation.md  mean_teacher.md  vat.md  vime.md
docs/novel/: diffusion_gnn_scm.md  gnn_ebm.md  gnn_scm.md
examples/: __init__.py  benchmark_models.py  cevae_m_ihdp.py  deconfounder_twin_pehe.py
scripts/: adaptive_benchmark_config.py  aggregate_results.py  diagnose_bridge_diff.py  experimental_benchmark_1000_30.py  generate_benchmark_matrix.py  generate_simple_charts.py  merge_asv_results.py  render_benchmark_summary.py  run_adaptive_benchmark.py  summarize_timings.py  test-asv-workflow.py  update_timing_metadata.py  write_timeout_result.py
tests/: conftest.py  test_active.py  test_active_trainer_logger.py  test_active_trainer_registry.py  test_benchmark_eval.py  test_bridge_diff_detailed.py  test_cate_uncertainty_strategy.py  test_cnflow.py  test_conformal_cate_interval_strategy.py  test_datasets.py  test_debiased_coverage_strategy.py  test_em_model.py  test_em_trainer.py  test_eval_active_script.py  test_generate_benchmark_matrix.py  test_layers.py  test_logger_noise.py  test_lt_flow_diff.py  test_masked_tabular_transformer.py  test_metrics_and_utils.py  test_misc.py  test_ordinal.py  test_package_install.py  test_predict_methods.py  test_prob_circuit_model.py  test_registry.py  test_registry_models_predict.py  test_trainer.py  test_vat_model.py  test_vime_model.py  test_wristband.py
tests/generative/: test_diffusion_gnn_scm.py  test_gnn_ebm.py  test_gnn_scm.py  (+1 more)
xtylearner/: __init__.py  eval_active_runner.py  losses.py  noise_schedules.py
(+121 files in other folders)
