[project]
name = "xtylearner"
version = "0.1.0"
description = "Flexible implementations of various learners for joint learning or pre-treatment, treatment and post-treatment outcomes."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Matthew Simmons"}
]

dependencies = [
    "torch",
    "scikit-learn",
    "numpy",
    "nflows",
    "pyyaml",
    "pandas",
]

[project.scripts]
xtylearner-train = "xtylearner.scripts.train:main"

[tool.setuptools.packages.find]
include = ["xtylearner*"]

[tool.setuptools.package-data]
xtylearner = ["configs/*.yaml"]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["xtylearner"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
