[project]
name = "xtylearner"
version = "0.1.0"
description = "Flexible implementations of various learners for joint learning or pre-treatment, treatment and post-treatment outcomes."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Matthew Simmons"}
]

dependencies = [
    "torch>=2.0,<2.3",
    "scikit-learn",
    "numpy",
    "nflows>=0.14",
    "pyyaml",
    "pandas",
    "scipy",
    "tabulate",
    "optuna",
    "asv>=0.6.5",
    "yamllint>=1.37.1",
]

[project.optional-dependencies]
causal = ["doubleml>=0.9.0"]

[project.scripts]
xtylearner-train = "xtylearner.scripts.train:main"

[tool.setuptools.packages.find]
include = ["xtylearner*"]

[tool.setuptools.package-data]
xtylearner = ["configs/*.yaml"]

[tool.pytest.ini_options]
addopts = "-vv --dist=loadgroup"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["xtylearner"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
